<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/shoe_name"
        app:layout_constraintBottom_toTopOf="@+id/et_shoe_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/et_shoe_name"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_Shoe_name"
        android:inputType="textPersonName"
        android:text="@{shoeViewModel.shoe.name}"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/company"

        app:layout_constraintBottom_toTopOf="@+id/et_com_name"
        app:layout_constraintStart_toStartOf="@+id/et_shoe_name"
        app:layout_constraintTop_toBottomOf="@+id/et_shoe_name" />

    <EditText
        android:id="@+id/et_com_name"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_company"
        android:text="@{shoeViewModel.shoe.company}"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/size"
        app:layout_constraintBottom_toTopOf="@+id/et_shoe_size"
        app:layout_constraintStart_toStartOf="@+id/et_com_name"
        app:layout_constraintTop_toBottomOf="@+id/et_com_name" />

    <EditText
        android:id="@+id/et_shoe_size"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_size"
        android:text="@{shoeViewModel.shoe.size+``}"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"

        app:layout_constraintBottom_toTopOf="@+id/et_desc"
        app:layout_constraintStart_toStartOf="@+id/et_shoe_size"
        app:layout_constraintTop_toBottomOf="@+id/et_shoe_size" />

    <EditText
        android:id="@+id/et_desc"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_desc"
        android:text="@{shoeViewModel.shoe.description}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>